fix horizontal scroll

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,8 @@
 .page {
   background-color: #fcf5e5;
   min-height: 100vh;
+  max-width: 100%;
+  overflow-x: hidden;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
 
